objects/BMCServiceDesk__BMC_WAN__c.object
<CustomObject>
    <fields>
        <fullName>BMCServiceDesk__Count__c</fullName>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InstanceID__c</fullName>
        <label>Instance ID</label>
        <length>38</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Resolution_Date__c</fullName>
        <label>Resolution Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__WAN_Type__c</fullName>
        <label>WAN Type</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frame Relay</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>